tests/duplicate_libs/test.js
// @flow
(global_foo: string); // error: number ~> string
